# AllkindsTeamBot

./: .env.example  .env.production  .gitignore  2024_08_create_anonymous_chat_sessions.py  2024_08_create_chat_messages_table.py  ARCHITECTURE.md  CHANGELOG.md  DEBUGGING_GUIDE.md  DEVELOPMENT_PRACTICES.md  DIAGNOSTICS.md  Dockerfile  POLLING_MODE_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  README.md  README_SETUP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md  TECH_DEBT.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  WEBHOOK_DEPLOYMENT_GUIDE.md  advanced_telegram_reset.sh  allkinds.db  analyze_railway_logs.py  backup_railway_db.sh  bot_manager.py  bot_pids.txt  check_dependencies.py  check_env.sh  check_group.py  check_logs.py  check_tokens.py  check_users.py  check_webhook.py  cleanup_pending_invites.py  cleanup_repo.py  (+130 more)
.cursor/rules/: allkinds.mdc
cleanup_backup/: delete_all_chats.py  delete_all_chats_and_matches.py  delete_all_matches.py  install_precommit_hook.py  temp_fix.txt  update_bot_username_references.py
migrations/: add_category_to_questions.py
migrations/versions/: add_user_state_table.py
scripts/: delete_all_groups.py  delete_pending_chats.py
src/: health.py  main.py
src/bot/: main.py  set_webhook.py  states.py
src/communicator_bot/: admin_tools.py  chat_handlers.py  handlers.py  handlers.py.bak  health.py  main.py  main.py.comm_fix_bak_20250429_170914  main.py.comm_fix_bak_20250429_172550  message_handlers.py  middlewares.py  navigation.py  new_handlers.py  repositories.py  (+3 more)
(+67 files in other folders)
